# expert-search-crewai

./: agents.yaml  app.py  config.json  crew_manager.py  main.py  models.py  pyproject.toml  replit.nix  tasks.py  tasks.yaml
api_cache/: item_detail_1146196853.json  item_detail_1169400302.json  item_detail_1276194095.json  item_detail_39846541505.json  item_detail_40336566383.json  item_detail_42058124518.json  item_detail_42549705240.json  item_detail_527192912534.json  item_detail_541537338428.json  item_detail_567361482341.json  item_detail_576959828830.json  item_detail_579864364454.json  item_detail_594760014147.json  item_detail_600214328709.json  item_detail_609123456780.json  item_detail_611968457808.json  item_detail_615600557521.json  item_detail_623194231146.json  item_detail_627500991274.json  item_detail_635474060330.json  item_detail_644738665468.json  item_detail_653085113869.json  item_detail_657206071446.json  item_detail_663817524978.json  item_detail_668203919248.json  item_detail_669749413382.json  item_detail_671753171539.json  item_detail_712375048998.json  item_detail_719067941193.json  item_detail_725016942981.json  item_detail_726594251410.json  item_detail_742446980182.json  item_detail_743366188947.json  item_detail_750206859799.json  item_detail_767857972204.json  item_detail_768560607435.json  item_detail_795717455695.json  item_detail_822558622328.json  item_detail_853941290797.json  item_detail_856421164704.json  (+12 more)
attached_assets/: Pasted--code-200-msg-success-data-item-id-745785638968-product-url-https-detail-1688-com-of-1739796763850.txt  (+6 more)
(+10 files in other folders)
